--- a/app/index.html
+++ b/app/index.html
@@ -31,12 +31,15 @@
       </div>
       <div class="sidebarContents shrink" id="rightSidebarContents">
         <div class="sidebarItem" id="rightSidebarToolbox1">
-          <div class="header">Controls</div>
+          <div class="header">Device ID: NULL</div>
         </div>
         <div class="sidebarItem" id="rightSidebarToolbox2">
-          <div class="header">Terminal</div>
+          <div class="header">Controls</div>
         </div>
         <div class="sidebarItem" id="rightSidebarToolbox3">
+          <div class="header">Terminal</div>
+        </div>
+        <div class="sidebarItem" id="rightSidebarToolbox4">
           <div class="header">Other</div>
         </div>
       </div>
